# stm32l071_i2c_slave_test

./: .gitmodules  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
