[package]
name = "stm32l071_i2c_slave_test"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1", features = [
  "defmt",
  "stm32l071cb",
  "unstable-pac",
  "time-driver-any",
  "exti",
  "memory-x",
] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.6", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = { version = "2" }
portable-atomic = { version = "1.7", features = ["unsafe-assume-single-core"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/jrmoulton/embassy", rev = "fc342915e6155dec7bafa3e135da7f37a9a07f5c" }
embassy-time-driver = { git = "https://github.com/jrmoulton/embassy", rev = "fc342915e6155dec7bafa3e135da7f37a9a07f5c" }
embassy-time-queue-driver = { git = "https://github.com/jrmoulton/embassy", rev = "fc342915e6155dec7bafa3e135da7f37a9a07f5c" }
embassy-stm32 = { git = "https://github.com/jrmoulton/embassy", rev = "fc342915e6155dec7bafa3e135da7f37a9a07f5c" }
embassy-sync = { git = "https://github.com/jrmoulton/embassy", rev = "fc342915e6155dec7bafa3e135da7f37a9a07f5c" }


[profile.release]
debug = 2
