[package]
name = "stm32l071_i2c_slave_test"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1", features = [
  "defmt",
  "stm32l071cb",
  "unstable-pac",
  "time-driver-any",
  "exti",
  "memory-x",
] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.6", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = { version = "2" }
portable-atomic = { version = "1.7", features = ["unsafe-assume-single-core"] }

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[patch.crates-io]
# make sure to get the latest git rev from GitHub, you can see the latest one here:
embassy-executor     = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
#embassy-rp           = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
embassy-sync         = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
embassy-time         = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
embassy-time-driver  = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
embassy-stm32        = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
#embassy-usb          = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
#embassy-usb-driver   = { git = "https://github.com/okhsunrog/embassy",     rev = "051cc88e8e1dfe888cb30e57283ef3ff8eb12154" }
