[workspace]
resolver = "2"
members = [
  "embassy/embassy-stm32",
  "embassy/embassy-sync",
  "embassy/embassy-executor",
  "embassy/embassy-time",
]

[package]
name = "stm32l071_i2c_slave_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stm32l071_i2c_slave_test"
harness = false                   # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[dependencies]
embassy-stm32 = { version = "0.1", path = "./embassy/embassy-stm32", features = [
  "defmt",
  "stm32l071cb",
  "unstable-pac",
  "time-driver-any",
  "exti",
  "memory-x",
] }
embassy-sync = { version = "0.6", path = "./embassy/embassy-sync", features = [
  "defmt",
] }
embassy-executor = { version = "0.6", path = "./embassy/embassy-executor", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", path = "./embassy/embassy-time", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = { version = "2" }
portable-atomic = { version = "1.7", features = ["unsafe-assume-single-core"] }

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
